ad, improve and adjust fragment_home.xml , UI UX

--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -27,7 +27,7 @@
         android:fontFamily="@font/poppins"
         android:text="@string/skin_cancer_detector"
         android:textAlignment="center"
-        android:textColor="@color/darkBlue"
+        android:textColor="@color/blue"
         android:textSize="34sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView5"
