--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -12,7 +12,7 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="220dp"
-        android:background="@color/darkBlue"
+        android:background="@color/blue"
         android:contentDescription="@string/doctor_icon"
         android:paddingTop="40dp"
         android:scaleType="centerCrop"
@@ -31,7 +31,7 @@
         android:fontFamily="@font/poppins"
         android:text="@string/titleWelcome"
         android:textAlignment="center"
-        android:textColor="@color/darkBlue"
+        android:textColor="@color/blue"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
         android:id="@+id/textView3"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/darkBlue"
+        android:background="@color/blue"
         android:fontFamily="@font/poppins"
         android:padding="10dp"
         android:text="@string/dicoding_submition"
