--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Asclepius" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/darkBlue</item>
+        <item name="colorPrimary">@color/blue</item>
     </style>
 
     <style name="Theme.Asclepius" parent="Base.Theme.Asclepius" />
