add Config, service, executors, adapter, dao, database, entity, repositories, response for articles. add injection and result

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -51,7 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/title_home" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/cancerScannerHome"
         android:layout_width="80dp"
         android:layout_height="50dp"
         android:layout_marginTop="20dp"
