--- a/app/src/main/res/layout/item_articles.xml
+++ b/app/src/main/res/layout/item_articles.xml
@@ -10,7 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="30dp">
+        android:paddingBottom="10dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ivArticle"
@@ -32,7 +32,9 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:ellipsize="end"
             android:fontFamily="@font/poppins"
+            android:maxLines="2"
             android:text="@string/judul_artikel"
             android:textSize="20sp"
             android:textStyle="bold"
@@ -46,6 +48,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:fontFamily="@font/poppins"
             android:text="@string/tanggal_publikasi"
@@ -61,6 +64,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="@font/poppins"
             android:text="@string/author"
             app:layout_constraintBottom_toBottomOf="parent"
