--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,8 @@
         <item name="colorPrimary">@color/blue</item>
     </style>
 
+    <style name="CardImageArticle">
+        <item name="cornerSizeTopLeft">15%</item>
+        <item name="cornerSizeTopRight">15%</item>
+    </style>
 </resources>
